# groonga-capi-samples

./: .gitignore  Makefile.am  configure.ac
data/: inspect-table.grn
doc/: index.md  table_no_key.md
grn_db/: Makefile.am  grn_db_create.c  grn_db_open.c  grn_db_open_or_create.c
grn_expr_exec/: Makefile.am  bookmarks.grn  load-at-once.c  load-one-entry.c  load.c  run-test.sh
grn_inspect/: Makefile.am  diary.grn  grn_inspect.c  grn_inspect_encoding.c  grn_inspect_indented.c  grn_inspect_limited.c  grn_inspect_name.c  grn_inspect_query_log_flags.c  grn_inspect_type.c  grn_p.c  grn_p_geo_point.c  grn_p_ii_values.c  pat.grn
grn_macro/: Makefile.am  grn_text_set.c  various-key-table.grn
grn_obj/: Makefile.am  grn_obj_is_builtin.c  grn_obj_is_bulk.c  grn_obj_is_column.c  grn_obj_is_corrupt.c  grn_obj_is_data_column.c  grn_obj_is_dirty.c  grn_obj_is_lexicon.c  grn_obj_is_number_family_bulk.c  grn_obj_is_reference_column.c  grn_obj_is_scalar_column.c  grn_obj_is_table.c  grn_obj_is_text_family_bulk.c  grn_obj_is_type.c  grn_obj_is_vector_column.c  grn_obj_is_weight_vector_column.c  lexicon.grn  scalar_column.grn  vector_column.grn  weight_vector.grn
grn_options/: Makefile.am  grn_options_get.c  grn_options_set.c
grn_str/: Makefile.am  grn_text_printf.c
grn_table/: Makefile.am  grn_table_create.c
grn_table_add/: Makefile.am  table_no_key.c
